--- a/bookly/frontend/package.json
+++ b/bookly/frontend/package.json
@@ -7,37 +7,34 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "react-router-dom": "^6.22.0",
-    "zustand": "^4.5.0",
-    "@tanstack/react-query": "^5.20.5",
-    "axios": "^1.6.7",
-    "react-hook-form": "^7.50.0",
+    "react-router-dom": "^6.20.0",
+    "zustand": "^4.4.0",
+    "@tanstack/react-query": "^5.0.0",
+    "axios": "^1.5.0",
+    "react-hook-form": "^7.45.0",
     "zod": "^3.22.0",
-    "framer-motion": "^11.0.8",
+    "framer-motion": "^10.16.0",
     "react-hot-toast": "^2.4.1",
-    "@headlessui/react": "^1.7.18",
-    "react-pdf": "^7.7.1",
+    "react-pdf": "^7.7.0",
     "react-swipeable": "^7.0.1",
-    "pdfjs-dist": "^3.11.174"
+    "@headlessui/react": "^1.7.17"
   },
   "devDependencies": {
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.0"
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "typescript": "^5.3.0",
+    "vite": "^4.4.5",
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.27",
+    "autoprefixer": "^10.4.14",
+    "@types/react-pdf": "^7.0.0",
+    "vercel": "^32.4.1"
   }
 }
