--- a/bookly/backend/package.json
+++ b/bookly/backend/package.json
@@ -9,30 +9,41 @@
     "db:generate": "npx prisma generate",
     "db:push": "npx prisma db push",
     "db:migrate": "npx prisma migrate dev",
+    "db:migrate:reset": "npx prisma migrate reset --force",
+    "db:seed": "npx ts-node scripts/import-books.ts",
+    "test:env": "npx ts-node test-env.ts",
     "deploy": "npm run build && node dist/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^7.0.0",
-    "dotenv": "^16.3.1",
-    "prisma": "^5.4.0",
     "@prisma/client": "^5.4.0",
-    "jsonwebtoken": "^9.0.2",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "multer": "^1.4.5-lts.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.0.0",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "otplib": "^12.0.1",
+    "prisma": "^5.4.0",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "@types/node": "^20.8.2",
-    "@types/express": "^4.17.17",
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.3",
     "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/multer": "^1.4.7",
+    "@types/node": "^20.8.2",
+    "@types/nodemailer": "^6.4.14",
+    "@types/speakeasy": "^2.0.9",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
+    "uuid": "^13.0.0"
   }
 }
