--- a/bookly/frontend/package.json
+++ b/bookly/frontend/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.0.0",
     "axios": "^1.5.0",
     "framer-motion": "^10.16.0",
+    "qrcode.react": "^3.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.45.0",
