feat(deploy): Prepare backend and frontend for Vercel deployment
This commit introduces configurations necessary for deploying both the backend API and the frontend application to Vercel.

- **backend/vercel.json:** Adds configuration for deploying the Node.js Express backend as a Vercel Serverless Function, including build commands and routes.
- **frontend/vercel.json:** Updates the frontend's Vercel configuration to explicitly set VITE_API_BASE_URL to point to the public URL of the deployed backend.
- **backend/src/server.ts:** Adds the Vercel frontend URL to the CORS allowed origins to enable cross-origin communication between the deployed frontend and a potentially local (or deployed) backend.

This setup facilitates the full deployment of the application stack on Vercel, allowing the frontend to access the API from anywhere.

--- a/bookly/frontend/vercel.json
+++ b/bookly/frontend/vercel.json
@@ -12,5 +12,10 @@
         }
       ]
     }
-  ]
+  ],
+  "build": {
+    "env": {
+      "VITE_API_BASE_URL": "https://bookly-backend.vercel.app"
+    }
+  }
 }
