Add vercel.json for backend deployment to fix routes configuration error

--- a/bookly/backend/vercel.json
+++ b/bookly/backend/vercel.json
@@ -1,28 +1,15 @@
 {
-  "version": 2,
   "builds": [
-    { "src": "src/server.ts", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "src/server.ts" }
-  ],
-  "headers": [
     {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Credentials", "value": "true" },
-        { "key": "Access-Control-Allow-Origin", "value": "https://bookly-bot.vercel.app" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET,DELETE,PATCH,POST,PUT,OPTIONS" },
-        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization, X-Telegram-Init-Data, X-Guest-Id" }
-      ]
+      "src": "src/server.ts",
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["dist/**"] }
     }
   ],
-  "env": {
-    "DATABASE_URL": "@neon_database_url",
-    "DIRECT_URL": "@neon_direct_url",
-    "JWT_SECRET": "@jwt_secret",
-    "JWT_REFRESH_SECRET": "@jwt_refresh_secret",
-    "TELEGRAM_BOT_TOKEN": "@telegram_bot_token",
-    "FRONTEND_URL": "@frontend_url"
-  }
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/server.ts"
+    }
+  ]
 }
