--- a/bookly/backend/vercel.json
+++ b/bookly/backend/vercel.json
@@ -1,13 +1,20 @@
 {
   "builds": [
     {
-      "src": "src/server.ts",
+      "src": "api/index.ts",
       "use": "@vercel/node",
       "config": {
         "includeFiles": [
-          "prisma/**"
+          "prisma/**",
+          "dist/**"
         ]
       }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.ts"
     }
   ]
 }
