--- a/bookly/backend/package.json
+++ b/bookly/backend/package.json
@@ -4,7 +4,7 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "nodemon src/server.ts",
-    "build": "tsc && cp -r uploads dist",
+    "build": "tsc && copyfiles -u 1 \"src/uploads/**/*\" dist",
     "start": "node dist/server.js",
     "db:generate": "npx prisma generate",
     "db:push": "npx prisma db push",
@@ -41,6 +41,7 @@
     "@types/nodemailer": "^6.4.14",
     "@types/speakeasy": "^2.0.9",
     "@types/uuid": "^10.0.0",
+    "copyfiles": "^2.4.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
