--- a/bookly/backend/package.json
+++ b/bookly/backend/package.json
@@ -4,7 +4,7 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "nodemon src/server.ts",
-    "build": "tsc && copyfiles -u 1 \"src/uploads/**/*\" dist",
+    "build": "tsc && copyfiles -u 1 \"uploads/**/*\" dist",
     "start": "node dist/server.js",
     "db:generate": "npx prisma generate",
     "db:push": "npx prisma db push",
